--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
                     <p id="isipesan" class="font-medium text-slate-500 mb-10 leading-relaxed md:text-lg">Jangan lupa bahagia dan juga bersyukur atas semua pencapaianmu, 
                         semua orang sayang padamu karena dirimu itu spesial! web ini di buat khusus untuk kamu, maaf kalo masih kurang bagus😚,Semoga suka!</p>
                         <h3 class="font-medium text-brown2 md:text-xl mb-5">Ohh iyaaa sebelum mulai ke About Us dulu yaa➡️🐣</h3>
-                    <button id="mulai" class="text-base font-semibold text-white bg-brownPrimary py-3 px-8 rounded-full hover:shadow-lg hover:bg-orange">Mulai</button>
+                    <button id="mulai" class="text-base font-semibold text-white bg-brownPrimary py-3 px-8 rounded-full hover:shadow-lg hover:bg-orange z-10">Mulai</button>
                 </div>
             </div>
         </div>
