--- a/about.html
+++ b/about.html
@@ -49,10 +49,10 @@
                 <div class="flex flex-wrap">
                     <div class="w-full px-4 md:w-1/2 mb-5 md:hidden">
                         <div class="">
-                            <img id="imghero" src="img/dynavx.png" alt="" class="max-w-full mx-auto">
+                            <img id="imghero" src="img/we3.jpg" alt="" class="max-w-full mx-auto">
                         </div>
                     </div>
-    
+
                     <div class="w-full self-center px-4 md:w-1/2">
                         <h3 class="font-semibold text-orange text-lg md:text-xl">HALLO ojann 👋🏻, Selamat Ulang Tahun yaaa 🤩</h3>
                         <h1 id="bannernama" class="text-brownPrimary font-bold text-4xl mt-1 md:text-5xl">Aku Saiyah Awaliyah  </h1>
@@ -85,7 +85,7 @@
                             Babak yang penuh dengan cerita indah dan pencapaian luar biasa.
                             Semoga hari ini dan seterusnya membawa kebahagiaan yang tiada tara.
                             Jangan pernah ragu untuk melangkah, karena dunia ini selalu menantimu! 🌹🎉</p>
-    
+
                         <a href="index.html" class="text-base font-semibold text-white bg-brownPrimary py-3 px-8 rounded-full hover:shadow-lg hover:bg-orange">Mulai</a>
                     </div>
 
