--- a/contact.html
+++ b/contact.html
@@ -111,6 +111,17 @@
                 padding: 6px 12px;
             }
         }
+
+       
+
+        /* CSS untuk gambar persegi */
+        .gambar-persegi {
+            width: 450px; /* Atur lebar gambar */
+            height: 150px; /* Atur tinggi gambar */
+            object-fit: cover; /* Memastikan gambar tidak terdistorsi */
+            border: 0px solid white; /* Tambahkan border putih untuk kontras */
+            box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2); /* Tambahkan bayangan untuk efek kedalaman */
+        }
     </style>
 </head>
 <body class="overflow-x-hidden">
@@ -147,12 +158,15 @@
     </header>
 
     <!-- CONTACT SECTION -->
-    <div class="contact-container">
-        <h1>Hubungi Aku</h1>
-        <p>Aku senang mendengar dari Kamu! Jika Kamu memiliki pertanyaan atau ingin berbagi sesuatu, jangan ragu untuk menghubungi aku yaa. Kamu dapat menghubungi aku melalui media sosial di bawah ini:</p>
-        <div class="contact-links">
-            <a href="https://instagram.com/hywaaaaa_" target="_blank" class="instagram">Instagram</a>
-            <a href="https://wa.me/+6285694550652" target="_blank" class="whatsapp">WhatsApp</a>
+    <div class="contact-container flex items-center">
+        <img src="img/awa.jpg" alt="Gambar Kecil" class="gambar-persegi mr-4">
+        <div>
+            <h1>Hubungi Aku</h1>
+            <p>Aku senang mendengar dari Kamu! Jika Kamu memiliki pertanyaan atau ingin berbagi sesuatu, jangan ragu untuk menghubungi aku yaa. Kamu dapat menghubungi aku melalui media sosial di bawah ini:</p>
+            <div class="contact-links">
+                <a href="https://instagram.com/hywaaaaa_" target="_blank" class="instagram">Instagram</a>
+                <a href="https://wa.me/+6285694550652" target="_blank" class="whatsapp">WhatsApp</a>
+            </div>
         </div>
     </div>
 
