--- a/about.html
+++ b/about.html
@@ -27,8 +27,7 @@
                             <ul class="block h-[100vh] md:flex md:h-full">
                                 <li class="group">
                                     <a href="index.html" class="text-base text-black py-10 mx-8 flex group-hover:text-brown2 md:py-2">Home</a>
-                                </li>
-                               
+                                </li>  
                                 <li class="group">
                                     <a href="about.html" class="text-base text-brown2 py-10 mx-8 flex group-hover:text-brown2 md:py-2">About Us</a>
                                 </li>
@@ -47,13 +46,10 @@
         <section id="hero" class="pt-28 md:pt-36 relative">
             <div class="container">
                 <div class="flex flex-wrap">
-                    <div class="w-full px-4 md:w-1/2 mb-5 md:hidden">
-                        <div class="">
-                            <img id="imghero" src="img/we3.jpg" alt="" class="max-w-full mx-auto">
-                        </div>
+                    <div class="w-full md:w-1/2 mb-5">
+                        <img id="imghero" src="img/we3.jpg" alt="" class="max-w-full mx-auto block">
                     </div>
-
-                    <div class="w-full self-center px-4 md:w-1/2">
+                    <div class="w-full md:w-1/2 self-center px-4">
                         <h3 class="font-semibold text-orange text-lg md:text-xl">HALLO ojann 👋🏻, Selamat Ulang Tahun yaaa 🤩</h3>
                         <h1 id="bannernama" class="text-brownPrimary font-bold text-4xl mt-1 md:text-5xl">Aku Saiyah Awaliyah  </h1>
                         <h2 class="font-medium text-brown2 md:text-xl mb-5">Mengucapkan Semoga Panjang Umur Dan Sehat Selalu 🥳</h2>
@@ -88,16 +84,9 @@
 
                         <a href="index.html" class="text-base font-semibold text-white bg-brownPrimary py-3 px-8 rounded-full hover:shadow-lg hover:bg-orange">Mulai</a>
                     </div>
-
-                    <div class="w-full px-4 md:w-1/2 mb-5">
-                        <div class="">
-                            <img id="imghero" src="img/we3.jpg" alt="" class="max-w-full mx-auto">
-                        </div>
-                    </div>
                 </div>
             </div>
         </section>
-    
     <!-- SCRIPT -->
     <script src="js/script.js"></script>
 </body>
